# dempy

./: LICENSE  MANIFEST.in  MatrixGenerator.py  Qgis_tool.py  README  README.md  README.txt  __init__.py  fftdem.py  linearDetrend.py  main.py  plotting.py  pointcloud.py  pyproject.toml  rasterTool.py  setup.py  shp_func.py  smooth2d.py
decomposition/: diamondSquare.html  diamondSquare.py  ds.pyx  fourierSpectrum.py  perronDecompo.py  setup.py  test_cy.py
dempy/: MatrixGenerator.py  dem_classes.py  diamond_square.pyx  fftdem.py  fourier_spectrum.py  lidar.py  morphometrics.py  morphometry.py  plotting.py  pointcloud.py  rasterTool.py  raster_class.py  similarity_indices.py  smooth2d.py  snow.py  spatial_snow.py
dempy/decomposition/: diamondSquare.c  ds.c  ds.html  fourierSpectrum.py  readme.md  test_diamondSquare.py
dempy/micmac_tools/: GCPs_sample_z.py  drone2DEM.sh  sortGCPsIm.py  unwarp_drone_part2.sh
dempy/snow/: setup.py  tabler.c  tabler.pyx  tabler_profile.py  test_tabler.py  test_winstral.py  winstral.c  winstral.html  winstral.py  winstral.pyx
misceallenous/: __init__.py  shp_func.py
