[project]
name = "dempy"
version = "2.0.0"
description = "A library of tools to work with Digital Elevation Models"
authors = [{ name = "Simon FILHOL", email = "simon.filhol@meteo.fr" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dask>=2026.3.0",
    "matplotlib>=3.10.8",
    "numba>=0.64.0",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "pyfftw>=0.15.1",
    "rioxarray>=0.19.0",
    "scipy>=1.17.1",
    "xarray>=2026.2.0",
    "zarr>=3.1.6",
]

[tool.uv.extra-build-dependencies]
cchardet = ["cython"]
